--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,5 +18,5 @@ jobs:
         with:
           go-version: '1.20'
 
-      - name: Force Failure
-        run: (exit 1)
+      - name: Go Tests
+        run: go test ./... -cover
