--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,8 +21,8 @@ jobs:
       - name: Go Tests
         run: go test ./... -cover
 
-  formatting:
-    name: formatting
+  style:
+    name: Style
     runs-on: ubuntu-latest
 
     steps:
