--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -20,3 +20,14 @@ jobs:
 
       - name: Build Prod
         run: ./scripts/buildprod.sh
+
+      - id: "auth"
+        uses: "google-github-actions/auth@v2"
+        with:
+          credentials_json: "${{ secrets.GCP_CREDENTIALS }}"
+
+      - name: setup-gcloud
+        uses: "google-github-actions/setup-gcloud@v2"
+
+      - name: "Use Gcloud CLI"
+        run: "gcloud info"
