--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -31,3 +31,6 @@ jobs:
 
       - name: "Gcloud build submit"
         run: "gcloud builds submit --tag us-central1-docker.pkg.dev/notely-423507/notely-ar-repo/zsolomon88/notely:latest"
+
+      - name: "Deploy to Cloud Run"
+        run: "gcloud run deploy notely --image us-central1-docker.pkg.dev/notely-423507/notely-ar-repo/zsolomon88/notely@sha256:1724d8bc62e154a24b23ffdb844f34ac19729b3420947b6dd3bb91fd047ef052 --region us-central1 --allow-unauthenticated --project notely-423507 --max-instances=4"
