--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -18,6 +18,9 @@ jobs:
         with:
           go-version: "1.20"
 
+      - name: Install GOOSE
+        run: go install github.com/pressly/goose/v3/cmd/goose@latest
+
       - name: Build Prod
         run: ./scripts/buildprod.sh
 
@@ -31,6 +34,9 @@ jobs:
 
       - name: "Gcloud build submit"
         run: "gcloud builds submit --tag us-central1-docker.pkg.dev/notely-423507/notely-ar-repo/zsolomon88/notely:latest"
+
+      - name: Build Prod
+        run: ./scripts/migrateup.sh
 
       - name: "Deploy to Cloud Run"
         run: "gcloud run deploy notely --image us-central1-docker.pkg.dev/notely-423507/notely-ar-repo/zsolomon88/notely:latest --region us-central1 --allow-unauthenticated --project notely-423507 --max-instances=4"
