--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -9,6 +9,9 @@ jobs:
     name: Deploy
     runs-on: ubuntu-latest
 
+    env:
+      DATABASE_URL: ${{ secrets.DATABASE_URL }}
+
     steps:
       - name: Check out code
         uses: actions/checkout@v4
@@ -35,7 +38,7 @@ jobs:
       - name: "Gcloud build submit"
         run: "gcloud builds submit --tag us-central1-docker.pkg.dev/notely-423507/notely-ar-repo/zsolomon88/notely:latest"
 
-      - name: Build Prod
+      - name: Run DB Migrations
         run: ./scripts/migrateup.sh
 
       - name: "Deploy to Cloud Run"
